<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPostCL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="16dp"
    tools:context=".activity.MainActivity"
    android:focusable="true">

    <TextView
        android:id="@+id/authorTV1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/moreIV"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        app:layout_constraintTop_toTopOf="@+id/avatarIV"
        tools:ignore="MissingConstraints"
        tools:text="@string/authorName" />

    <TextView
        android:id="@+id/postTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/postTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintEnd_toEndOf="@+id/postTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoContainer"
        tools:checked="@sample/posts.json/data/liked"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkable="true"
        android:contentDescription="@string/description_views"
        app:icon="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoContainer"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkable="false"
        android:contentDescription="@string/description_views"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoContainer"
        tools:text="@sample/posts.json/data/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkable="false"
        android:contentDescription="@string/description_post_share"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoContainer"
        tools:text="@sample/posts.json/data/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moreIV"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:checkable="false"
        android:contentDescription="@string/description_more"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/avatarIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatarIV" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/avatarIV"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        tools:ignore="MissingConstraints"
        tools:text="@string/published" />

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:src="@drawable/ic_netology_logo"
        app:barrierDirection="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#717171"
        app:layout_constraintBottom_toTopOf="@+id/postTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTV" />

    <ImageView
        android:id="@+id/videoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:src="@drawable/ic_play_circle_48"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"/>

    <ScrollView
        android:id="@+id/postSV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV">


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>