<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/authorTV1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/moreIB"
            app:layout_constraintStart_toEndOf="@+id/avatarIV"
            app:layout_constraintTop_toTopOf="@+id/avatarIV"
            tools:ignore="MissingConstraints"
            tools:text="@string/authorName" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@+id/avatarIV"
            app:layout_constraintStart_toEndOf="@+id/avatarIV"
            tools:ignore="MissingConstraints"
            tools:text="@string/published" />

        <ImageView
            android:id="@+id/avatarIV"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:src="@drawable/ic_netology_logo"
            app:barrierDirection="bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/moreIB"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/avatarIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/avatarIV"
            app:srcCompat="@drawable/ic_baseline_more_vert_24" />

        <TextView
            android:id="@+id/postTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/postTV"
            android:autoLink="web"
            android:linksClickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

        <ImageView
            android:id="@+id/shareIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="@dimen/common_spacing"
            app:layout_constraintStart_toEndOf="@+id/likeIV"
            app:layout_constraintTop_toBottomOf="@+id/postTV"
            app:srcCompat="?attr/actionModeShareDrawable" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTV"
            app:srcCompat="@drawable/ic_baseline_visibility_24" />

        <ImageView
            android:id="@+id/likeIV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/common_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTV"
            app:srcCompat="@drawable/ic_heart_like" />

        <TextView
            android:id="@+id/likedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="10"
            app:layout_constraintStart_toEndOf="@+id/likeIV"
            app:layout_constraintTop_toBottomOf="@+id/postTV" />

        <TextView
            android:id="@+id/shareTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="0"
            app:layout_constraintStart_toEndOf="@+id/shareIV"
            app:layout_constraintTop_toBottomOf="@+id/postTV" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="5"


            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/postTV" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#717171"
            app:layout_constraintBottom_toTopOf="@+id/postTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

        <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/shareIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>